--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -10,7 +9,17 @@
   <link rel="stylesheet" href="css/index.css">
 
 </head>
-
+<header>
+  <nav class="nav1">
+    <img class="lambda" src="https://raw.githubusercontent.com/guythunder101/Sprint-Challenge--User-Interface/master/assets/lambda-black.png">
+      <a href="">Home</a>
+      <a href="C:\Users\badge\Sprint-Challenge--User-Interface\about.html">About</a>
+      <a href="">Products</a>
+      <a href="">Blog</a>
+      <a href="">Contact</a>
+    </nav>
+<img class="big" src="https://raw.githubusercontent.com/guythunder101/Sprint-Challenge--User-Interface/master/assets/jumbo.jpg">
+  </header>
 <body>
     <div class="container">
    
@@ -30,16 +39,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div class="box1" class="b1">Box 1</div>
+                <div class="box2"class="b2">Box 2</div>
+                <div class="box3"class="b3">Box 3</div>
+                <div class="box4"class="b4">Box 4</div>
+                <div class="box5"class="b5">Box 5</div>
+                <div class="box6"class="b6">Box 6</div>
+                <div class="box7"class="b7">Box 7</div>
+                <div class="box8"class="b8">Box 8</div>
+                <div class="box9"class="b9">Box 9</div>
+                <div class="box10"class="b10">Box 10</div>
             </div>
         
         </section>
